--- a/client/css-unbuilt/main.css
+++ b/client/css-unbuilt/main.css
@@ -1,6 +1,6 @@
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 @import "./no-anim.css";
 @import "./generic.css";
